@@ -12,9 +12,12 @@
  */
 package org.sonatype.nexus.swagger.internal;
 
-import java.lang.annotation.Annotation;
 import java.lang.reflect.Type;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.HashSet;
 import java.util.Iterator;
+import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Set;
 
@@ -22,15 +25,19 @@ import org.sonatype.nexus.common.app.ApplicationVersion;
 import org.sonatype.nexus.rest.Resource;
 import org.sonatype.nexus.swagger.SwaggerContributor;
 
-import com.google.common.collect.ImmutableSet;
-import io.swagger.converter.ModelConverter;
-import io.swagger.converter.ModelConverterContext;
-import io.swagger.converter.ModelConverters;
-import io.swagger.jaxrs.Reader;
-import io.swagger.models.Info;
-import io.swagger.models.Model;
-import io.swagger.models.Swagger;
-import io.swagger.models.properties.Property;
+import com.fasterxml.jackson.databind.JavaType;
+import io.swagger.v3.core.converter.AnnotatedType;
+import io.swagger.v3.core.converter.ModelConverter;
+import io.swagger.v3.core.converter.ModelConverterContext;
+import io.swagger.v3.core.converter.ModelConverters;
+import io.swagger.v3.jaxrs2.Reader;
+import io.swagger.v3.oas.annotations.tags.Tag;
+import io.swagger.v3.oas.models.OpenAPI;
+import io.swagger.v3.oas.models.Operation;
+import io.swagger.v3.oas.models.PathItem;
+import io.swagger.v3.oas.models.Paths;
+import io.swagger.v3.oas.models.info.Info;
+import io.swagger.v3.oas.models.media.Schema;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.event.ContextRefreshedEvent;
 import org.springframework.context.event.EventListener;
@@ -38,9 +45,20 @@ import org.springframework.context.event.EventListener;
 import static com.google.common.base.Preconditions.checkNotNull;
 
 /**
- * Swagger model component.
+ * OpenAPI model component (formerly Swagger 1.x model).
  *
- * @since 3.3
+ * <p>
+ * NEXUS-46395: migrated from Swagger 1.x to OpenAPI 3.x. Key changes:
+ * <ul>
+ * <li>{@code io.swagger.jaxrs.Reader} \u2192 {@link io.swagger.v3.jaxrs2.Reader}</li>
+ * <li>{@code io.swagger.models.Swagger} \u2192 {@link OpenAPI}</li>
+ * <li>{@code io.swagger.converter.ModelConverter#resolve(Type, ...)} \u2192
+ * {@link ModelConverter#resolve(AnnotatedType, ModelConverterContext, Iterator)}</li>
+ * <li>{@code Property} merged into {@link Schema} in OpenAPI 3.x; the
+ * {@code resolveProperty()} method is gone (only {@code resolve()} now).</li>
+ * <li>{@link Reader#read(Class)} returns the {@link OpenAPI} directly; we keep a
+ * reference to it and apply contributors after each scan.</li>
+ * </ul>
  */
 @org.springframework.stereotype.Component
 public class SwaggerModel
@@ -54,18 +72,27 @@ public class SwaggerModel
   @Autowired
   public SwaggerModel(
       final ApplicationVersion applicationVersion,
+      final List<ModelConverter> converters,
       final List<SwaggerContributor> contributors)
   {
     this.applicationVersion = checkNotNull(applicationVersion);
     this.contributors = checkNotNull(contributors);
 
+    registerConverters(converters);
+
+    this.reader = new Reader(createOpenApi());
+  }
+
+  private static void registerConverters(final List<ModelConverter> converters) {
+    ModelConverters instance = ModelConverters.getInstance();
+
     // filter banned types from model, such as Groovy's MetaClass
-    ModelConverters.getInstance().addConverter(new ModelFilter());
+    instance.addConverter(new ModelFilter());
 
     // fix missing fields and incorrect examples in repository API models
-    ModelConverters.getInstance().addConverter(new RepositoryApiModelConverter());
+    instance.addConverter(new RepositoryApiModelConverter());
 
-    this.reader = new Reader(createSwagger());
+    converters.forEach(instance::addConverter);
   }
 
   @EventListener
@@ -79,51 +106,131 @@ public class SwaggerModel
   }
 
   private void scan(final Class<? extends Resource> resourceClass) {
+    // NEXUS-46395: restore Swagger 1.x's two behaviours that OpenAPI 3.x lost in the migration.
+    //
+    // 1. Skip resources without @Tag (was: skip without @Api). swagger-jaxrs 1.x's Reader skipped
+    // classes with no @Api annotation by default (config.scanAllResources=false), which kept
+    // /internal/* paths and other undocumented resources out of the public OpenAPI spec.
+    // swagger-jaxrs2 has no equivalent default; everything with @Path is included. Replicate
+    // the prior filter explicitly.
+    //
+    // 2. Find @Tag through the full type hierarchy. swagger-jaxrs2 2.2.35's
+    // ReflectionUtils.getRepeatableAnnotationsArray walks the implemented interfaces but
+    // returns the FIRST interface's result, even when it's an empty array - so for
+    // `class Foo implements Resource, FooDoc` (with @Tag only on FooDoc), the @Tag from FooDoc
+    // is never seen because Resource.class returns first with an empty array. This is why
+    // e.g. /v1/repositories/{repositoryName} (RepositoriesResource implements ...DocResource)
+    // landed under the "default" tag while /v1/repositories/raw/hosted (RawHostedRepositories-
+    // ApiResource has @Tag directly on the class) was correctly grouped under "Repository
+    // Management". We collect tags ourselves through a full transitive walk and, after the
+    // Reader runs, apply them to any operation it left tagless.
+    Set<String> classTags = collectTags(resourceClass);
+    if (classTags.isEmpty()) {
+      return;
+    }
+
+    // Snapshot identity of all operations already in the document so we can identify the
+    // operations contributed by *this* resource's read() call.
+    Set<Operation> preExistingOps = collectAllOperations(getOpenApi());
+
     reader.read(resourceClass);
-    contributors.forEach(c -> c.contribute(getSwagger()));
+
+    // Apply our resolved class-level tags to any newly-registered operation that came back tagless.
+    Paths paths = getOpenApi().getPaths();
+    if (paths != null) {
+      for (PathItem item : paths.values()) {
+        for (Operation op : item.readOperations()) {
+          if (preExistingOps.contains(op)) {
+            continue;
+          }
+          if (op.getTags() == null || op.getTags().isEmpty()) {
+            op.setTags(new ArrayList<>(classTags));
+          }
+        }
+      }
+    }
+
+    contributors.forEach(c -> c.contribute(getOpenApi()));
   }
 
-  public Swagger getSwagger() {
-    return reader.getSwagger();
+  /**
+   * Collect all {@link Tag#name() tag names} declared anywhere in the class's transitive type
+   * hierarchy (the class itself, every superclass up to {@code Object}, and every implemented
+   * interface plus its super-interfaces). Replaces swagger-jaxrs2's buggy interface walk.
+   */
+  private static Set<String> collectTags(final Class<?> cls) {
+    Set<String> tags = new LinkedHashSet<>();
+    collectTags(cls, tags, new HashSet<>());
+    return tags;
   }
 
-  private Swagger createSwagger() {
-    return new Swagger().info(new Info()
+  private static void collectTags(final Class<?> cls, final Set<String> out, final Set<Class<?>> seen) {
+    if (cls == null || cls == Object.class || !seen.add(cls)) {
+      return;
+    }
+    for (Tag t : cls.getAnnotationsByType(Tag.class)) {
+      String name = t.name();
+      if (name != null && !name.isEmpty()) {
+        out.add(name);
+      }
+    }
+    collectTags(cls.getSuperclass(), out, seen);
+    for (Class<?> iface : cls.getInterfaces()) {
+      collectTags(iface, out, seen);
+    }
+  }
+
+  private static Set<Operation> collectAllOperations(final OpenAPI openApi) {
+    Paths paths = openApi.getPaths();
+    if (paths == null) {
+      return Collections.emptySet();
+    }
+    Set<Operation> ops = Collections.newSetFromMap(new java.util.IdentityHashMap<>());
+    for (PathItem item : paths.values()) {
+      ops.addAll(item.readOperations());
+    }
+    return ops;
+  }
+
+  public OpenAPI getOpenApi() {
+    return reader.getOpenAPI();
+  }
+
+  private OpenAPI createOpenApi() {
+    return new OpenAPI().info(new Info()
         .title("Nexus Repository Manager REST API")
         .version(applicationVersion.getVersion()));
   }
 
+  /**
+   * NEXUS-46395: ModelConverter SPI redesigned in OpenAPI 3.x. Single resolve(AnnotatedType)
+   * method replaces both resolve(Type) and resolveProperty(Type) from Swagger 1.x.
+   */
   private static class ModelFilter
       implements ModelConverter
   {
-    private static final Set<String> BANNED_TYPE_NAMES = ImmutableSet.of(
+    private static final Set<String> BANNED_TYPE_NAMES = Set.of(
         "[simple type, class groovy.lang.MetaClass]" // groovy's MetaClass typeName
     );
 
     @Override
-    public Model resolve(
-        final Type type,
+    public Schema<?> resolve(
+        final AnnotatedType annotatedType,
         final ModelConverterContext context,
         final Iterator<ModelConverter> chain)
     {
-      if (!BANNED_TYPE_NAMES.contains(type.getTypeName()) && chain.hasNext()) {
-        return chain.next().resolve(type, context, chain);
+      Type type = annotatedType.getType();
+      String typeName;
+      if (type instanceof JavaType) {
+        typeName = type.toString();
       }
-      return null;
-    }
-
-    @Override
-    public Property resolveProperty(
-        final Type type,
-        final ModelConverterContext context,
-        final Annotation[] annotations,
-        final Iterator<ModelConverter> chain)
-    {
-      if (!BANNED_TYPE_NAMES.contains(type.getTypeName()) && chain.hasNext()) {
-        return chain.next().resolveProperty(type, context, annotations, chain);
+      else {
+        typeName = type.getTypeName();
+      }
+      if (!BANNED_TYPE_NAMES.contains(typeName) && chain.hasNext()) {
+        return chain.next().resolve(annotatedType, context, chain);
       }
       return null;
     }
   }
-
 }
